# semausu

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  sweep.sh  wait_for
res/: gateway.lua  gtytest.lua
res/templates/: _password_changed.html  _verify_account.html
runtime/smtp4dev/: database.db  selfsigned-certificate.cer  selfsigned-certificate.pfx
src/: main.cpp  nozama.h  semausu.h
src/blockchain/: coin.h
src/gateway/: coin.h  common.h  gateway.cpp  gateway.h  gateway.scc  main.cpp  users.cpp  users.h
tests/: main.cc  swept.cpp
tests/swept/: .config  .env  docker-compose.yml  startup.lua
tests/swept/scripts/: gateway.lua
tests/swept/tests/: test_gateway_init.lua  test_gty_init.lua  test_gty_users_admin.lua  test_gty_users_login.lua  test_gty_users_register.lua  test_gty_users_token.lua  test_gty_users_verify.lua
